--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-        <title>Unbanned G+ – Play Free Unblocked Games 6x</title>
-        <meta name="description" content="Unbanned G+: Enjoy a seamless gaming experience with a diverse array of ad-free, no-download unblocked free games. Play Unbanned G+ Unblocked Games 6x on Chrome." />
+        <title>Unbanned G+ – Play Free Unblocked Games Online </title>
+        <meta name="description" content="Unbanned G+: Enjoy a seamless gaming experience with a diverse array of ad-free, no-download unblocked free games. Play Unbanned G+ Unblocked Games on Chrome." />
         <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
 	    <meta name="keywords" content="classroom 6x,classroom 6x unblocked, free games, FAF Games, unblocked games, online games, free online games, free games, browser games, chrome games, chromebook games, chrome online games, pc games">
         <meta name="robots" content="all,index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
@@ -13,14 +13,7 @@
         <link rel="stylesheet" href="/assets/css/Quicksand.css" />
         <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css" />
         <link rel="stylesheet" href="/assets/css/styles.css" />
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4BFZYL1PJW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-4BFZYL1PJW');
-</script>
+
 		<script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -152,16 +145,7 @@
             <div class="content-wrapper">
                 <div class="container">
 							  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
-<script type="text/javascript">
-	atOptions = {
-		'key' : '2955a825c818b1c14d6edb01bcc93daa',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/2955a825c818b1c14d6edb01bcc93daa/invoke.js"></script>
+
 							  </div></div>
                     <h1 style="text-align: center;">Unbanned G+</h1>
                     <p style="text-align: center;">
