--- a/index.html
+++ b/index.html
@@ -2314,57 +2314,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-  <h2>Why Is Unbanned G+ So Popular?</h2>
-  <p>
-    The main reason <a href="https://unbanned-gplus.github.io/">Unbanned G+ unblocked games</a> are popular is simple: convenience. 
-    Many schools and workplaces block access to gaming sites, but Unbanned G+ offers a way around these restrictions. 
-    You can just open the site in your browser and start playing right away. No sign-ups, no extra software, just pure gaming fun.
-  </p>
-  <p>
-    Players love it because it works on Chromebooks, laptops, and even mobile devices, making it easy to jump into a game anywhere. 
-    Plus, most of the games are light and load quickly, so you don’t need a powerful computer to enjoy them.
-  </p>
-  <h2>What Makes Unbanned G+ Unblocked Games Special?</h2>
-  <p>
-    Unlike other random sites, Unbanned G+ focuses on games that are safe, browser-friendly, and school-friendly. 
-    The games are short, addictive, and perfect for a quick study break. Many titles also have endless levels or challenges that make you want to come back again and again.
-  </p>
-  <p>
-    If you search online for “play Unbanned G+ unblocked games free”, you’ll notice how often players recommend it as one of the top choices for stress-free gaming at school.
-  </p>
-  <h2>Benefits of Playing on Unbanned G+</h2>
-  <ul>
-    <li>No downloads needed – play instantly in your browser.</li>
-    <li>Safe for school and work – designed to bypass common restrictions.</li>
-    <li>Huge variety – from <a href="https://unbanned-gplus.github.io/category/running">running games</a> to puzzles, racing, sports, and classics.</li>
-    <li>Easy access – just search “Unbanned G+ unblocked games” and you’re ready.</li>
-    <li>Quick entertainment – perfect for short breaks or free periods.</li>
-  </ul>
-  <h2>Top 10 Unbanned G+ Games</h2>
-  <ol>
-    <li><a href="https://unbanned-gplus.github.io/game/slope">Slope Unblocked</a> – a fast-paced 3D running game where you guide a ball down tricky slopes.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/run-3">Run 3</a> – explore endless tunnels and platforms in this classic space running adventure.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/drift-hunters">Drift Hunters</a> – customize cars and test your drifting skills on realistic tracks.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/1v1-lol">1v1.LOL</a> – a fun battle royale and building game similar to Fortnite.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/retro-bowl">Retro Bowl</a> – manage your football team and play exciting retro-style matches.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/ovo">OvO Game</a> – test your parkour skills by running, jumping, and dodging traps.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/basketball-stars">Basketball Stars</a> – go head-to-head in quick basketball duels with friends or AI.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/tunnel-rush">Tunnel Rush</a> – race through colorful tunnels at lightning speed.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/minecraft-classic">Minecraft Classic</a> – enjoy a simple, browser-based version of the iconic building game.</li>
-    <li><a href="https://unbanned-gplus.github.io/game/among-us-online">Among Us Online</a> – play the social deduction hit right in your browser.</li>
-  </ol>
-  <h2>FAQs About Unbanned G+</h2>
-  <h3><strong>1. What is Unbanned G+?</strong><br></h3>
- <p> Unbanned G+ is a free gaming website that provides access to unblocked games, especially designed for students and players who want to enjoy games at school or work without restrictions.</p>
-  <h3><strong>2. Is Unbanned G+ safe to use?</strong><br></h3>
-  <p>Yes, Unbanned G+ hosts browser-based games that don’t require downloads, making it generally safe. However, it’s always good practice to play from trusted networks and avoid giving personal details.</p>
-  <h3><strong>3. Can I play Unbanned G+ games on a Chromebook?</strong><br></h3>
- <p> Absolutely. Unbanned G+ works perfectly on Chromebooks, laptops, desktops, and even mobile devices since the games run directly in the browser.</p>
-  <h3><strong>4. Do I need to download anything to play on Unbanned G+?</strong><br></h3>
- <p> No downloads are needed. All games are available online and can be played instantly in your browser.</p>
-   <h3><strong>5. What are the most popular Unbanned G+ unblocked games?</strong><br></h3>
-<p>Some of the top titles include Slope Unblocked, Run 3, Drift Hunters, Retro Bowl, 1v1.LOL, and OvO Game.>.
-  </p>
+ 
                             </div>
                         </div>
                     </div>
@@ -2383,7 +2333,7 @@
                     <div class="col-lg-3">
 <h4> Category</h4>
 <p>
-<a href="/category/unblocked-games-6x" title="Unblocked Games 6x">Unblocked Games 6x</a> |
+<a href="/category/unblocked-games" title="Unblocked Games">Unblocked Games</a> |
 <a href="/category/action" title="Action Games">Action</a> |
 <a href="/category/adventure" title="Adventure Games">Adventure</a> |
 <a href="/category/arcade" title="Arcade Games">Arcade Games</a> |
