--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <h1 style="text-align: center;">Unbanned G+</h1>
                     <p style="text-align: center;">
     Looking for a fun way to pass the time during a break at school or work, 
-    Unbanned G+</a> is one of the best places online to play 
+    <b>Unbanned G Plus</b></a> is one of the best places online to play 
     <a href="https://unbanned-gplus.github.io/">free unblocked games 6x</a>. 
     This gaming site is designed to help students and casual players enjoy quick, browser-based games without worrying about downloads or restrictions. 
     Whether you like <a href="https://unbanned-gplus.github.io/category/action">action</a>, 
