--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css" />
         <link rel="stylesheet" href="/assets/css/styles.css" />
 
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YG1CBEB1K8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YG1CBEB1K8');
+</script>
+
 		<script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -54,46 +64,7 @@
   ]
 }
 </script>
-		<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "What is Unbanned G+?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Unbanned G+ is a free gaming website that provides access to unblocked games, especially designed for students and players who want to enjoy games at school or work without restrictions."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Is Unbanned G+ safe to use?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, Unbanned G+ hosts browser-based games that don’t require downloads, making it generally safe to play."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Can I play Unbanned G+ games on a Chromebook?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, Unbanned G+ works perfectly on Chromebooks, laptops, desktops, and even mobile devices since the games run directly in the browser."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "What are the most popular Unbanned G+ games?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Some of the most popular games are Slope Unblocked, Run 3, Drift Hunters, Retro Bowl, 1v1.LOL, and OvO Game."
-      }
-    }
-  ]
-}
-</script>
+		
     </head>
     <body>
         <header>
