--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-        <title>Unbanned G+ – Play Free Unblocked Games Online </title>
-        <meta name="description" content="Unbanned G+: Enjoy a seamless gaming experience with a diverse array of ad-free, no-download unblocked free games. Play Unbanned G+ Unblocked Games on Chrome." />
+        <title>Unbanned G+ - Play Unblocked Games G+ </title>
+        <meta name="description" content="Unbanned G+ - Enjoy a seamless gaming experience with a diverse array of ad-free, no-download unblocked free games. Play Unbanned G+ Unblocked Games on Chrome." />
         <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
-	    <meta name="keywords" content="classroom 6x,classroom 6x unblocked, free games, FAF Games, unblocked games, online games, free online games, free games, browser games, chrome games, chromebook games, chrome online games, pc games">
+	    <meta name="keywords" content="classroom 6x, Unbanned G+ classroom 6x unblocked, Unbanned G+ free games, Unbanned G+ FAF Games, Unbanned G+ unblocked games, Unbanned G+ online games, Unbanned G+ free online games, Unbanned G+ free games, Unbanned G+ browser games, Unbanned G+ chrome games, Unbanned G+ chromebook games, Unbanned G+ chrome online games, Unbanned G+ pc games">
         <meta name="robots" content="all,index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
 	    <meta name="publisher" content="Unbanned G+ Team">
 	    <link rel="canonical" href="https://unbanned-gplus.github.io/" />
