--- a/index.html
+++ b/index.html
@@ -2289,6 +2289,156 @@
                             </div>
                         </div>
                     </div>
+
+<article>
+
+  <h1>Unbanned G+ – Play Free Unblocked Games Without Limits</h1>
+
+  <p>
+    Getting stuck with blocked games during school or work breaks is frustrating.
+    That’s where <a href="https://unbanned-gplus.github.io/">Unbanned G+</a> comes in.
+    It’s a clean, fast platform made for players who want instant access to
+    <strong>unblocked games</strong> without downloads, logins, or annoying restrictions.
+  </p>
+
+  <p>
+    From casual puzzle games to action-packed multiplayer titles,
+    <strong>g+ games</strong> are built to load quickly and stay accessible on restricted networks.
+    No tricks, no forced installs—just click and play.
+  </p>
+
+  <h2>Why Unbanned G+ Games Work So Well</h2>
+
+  <p>
+    Many sites claim to offer <strong>unbanned games g+</strong>, but few actually deliver.
+    Unbanned G+ focuses on stability, speed, and simplicity so players can enjoy
+    <strong>unblocked games g plus</strong> without interruptions.
+  </p>
+
+  <ul>
+    <li>Games run directly in your browser</li>
+    <li>Designed to bypass common school and office filters</li>
+    <li>Works smoothly on low-end devices</li>
+    <li>Simple layout with no clutter</li>
+  </ul>
+
+  <h2>Top 10 Unbanned G+ Games You Should Try</h2>
+
+  <p>
+    If you’re not sure where to start, these are some of the most played and trusted
+    <strong>games g+</strong> on the platform. Each one is optimized for fast loading and smooth gameplay.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/impostor-vs-noob">Impostor vs Noob</a></h3>
+  <p>
+    A fast-paced action game where timing and strategy matter.
+    Short rounds make it perfect for quick breaks without losing focus.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/duck-life-4">Duck Life 4</a></h3>
+  <p>
+    Train your duck, compete in races, and unlock upgrades.
+    It starts simple but quickly becomes addictive for casual players.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/getaway-shootout">Getaway Shootout</a></h3>
+  <p>
+    A chaotic multiplayer game with unique movement mechanics.
+    Ideal for players who enjoy competitive and unpredictable gameplay.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/fireboy-and-watergirl">Fireboy and Watergirl</a></h3>
+  <p>
+    A classic cooperative puzzle game focused on teamwork and coordination.
+    Perfect for two players sharing one keyboard.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/city-car-driving-stunt-master">City Car Driving: Stunt Master</a></h3>
+  <p>
+    Drive freely through city tracks and perform stunts.
+    A relaxed racing experience that works well on most devices.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/stickman-hook">Stickman Hook</a></h3>
+  <p>
+    A smooth physics-based game with quick levels.
+    Easy to learn and great for short play sessions.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/vex-6">Vex 6</a></h3>
+  <p>
+    A challenging platformer that tests precision and timing.
+    Best suited for players who enjoy skill-based games.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/paper-io">Paper.io</a></h3>
+  <p>
+    Expand your territory while avoiding enemies.
+    Simple rules with intense and competitive gameplay.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/basketball-legends">Basketball Legends</a></h3>
+  <p>
+    Arcade-style basketball with quick matches and special moves.
+    Fun for both solo play and local multiplayer.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/game/cookie-clicker">Cookie Clicker</a></h3>
+  <p>
+    A relaxing idle game that rewards steady progress.
+    Ideal when you want something simple and low effort.
+  </p>
+
+  <h2>Browse Unblocked Games by Category</h2>
+
+  <p>
+    If you prefer exploring by type, Unbanned G+ organizes all
+    <strong>unblocked games</strong> into clear categories for easy navigation.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/stickman">Stickman Games</a></h3>
+  <p>
+    Fast-paced games featuring stickman characters.
+    These titles focus on movement, action, and quick reactions.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/action">Action Games</a></h3>
+  <p>
+    Designed for players who enjoy combat and fast gameplay.
+    Perfect when you want excitement without long tutorials.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/2-players">2 Player Games</a></h3>
+  <p>
+    Made for friends sharing the same screen.
+    Great for competitive or cooperative play during breaks.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/puzzle">Puzzle Games</a></h3>
+  <p>
+    Focused on logic and problem-solving.
+    A good choice for relaxing while keeping your mind active.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/racing">Racing Games</a></h3>
+  <p>
+    Quick races and easy controls without downloads.
+    Suitable for all skill levels and devices.
+  </p>
+
+  <h3><a href="https://unbanned-gplus.github.io/category/multiplayer">Multiplayer Games</a></h3>
+  <p>
+    Play against real players online.
+    These games offer higher replay value and competition.
+  </p>
+ 
+
+  <p>
+    Explore, play, and enjoy games that actually work when you need them.
+  </p>
+
+</article>
+					
                 </div>
             </div>
         </main>
