--- a/index.html
+++ b/index.html
@@ -2391,10 +2391,8 @@
 
   <h2>Browse Unblocked Games by Category</h2>
 
-  <p>
-    If you prefer exploring by type, Unbanned G+ organizes all
-    <strong>unblocked games</strong> into clear categories for easy navigation.
-  </p>
+<p>Sometimes you know exactly what you want to play. Other times, you just want to browse. That is why Unbanned G+ organizes games into clean categories so you can find your vibe fast.</p>
+
 
   <h3><a href="https://unbanned-gplus.github.io/category/stickman">Stickman Games</a></h3>
   <p>
