--- a/index.html
+++ b/index.html
@@ -2429,6 +2429,12 @@
     Play against real players online.
     These games offer higher replay value and competition.
   </p>
+
+	<h2>Safe, Simple, and Always Unblocked</h2>
+
+<p>One thing players appreciate is peace of mind. Unbanned G+ keeps things clean—no forced downloads, no shady redirects, and no confusing menus. Just click, play, and enjoy.
+
+That is why when people search for unblocked, unblocked games, or unbanned g+, they often end up sticking around longer than planned.</p>
  
 
   <p>
